<resources>
    <string name="app_name">Fitness4U</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_history">History</string>
    <string name="title_inspiration">Get Inspiration</string>
    <string name="title_settings">Settings</string>
    <string name="welcome_text">WELCOME</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">48PMEff6t61HgpFyE216kAbBD</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">j413mnJuZqFpckXCWs5p97tYtA8Ez1QxDi5UFUT8evTsHnl5eL</string>
    <string-array name="heightDropdown">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="define_ActionBarSherlock"></string>
    <string name="library_ActionBarSherlock_author">scoute-dich</string>
    <string name="library_ActionBarSherlock_authorWebsite"></string>
    <string name="library_ActionBarSherlock_libraryName">Sieben</string>
    <string name="library_ActionBarSherlock_libraryDescription">A small android application to perform the seven minutes workout.</string>
    <string name="library_ActionBarSherlock_libraryVersion"></string>
    <string name="library_ActionBarSherlock_libraryWebsite">https://github.com/scoute-dich/Sieben</string>
    <string name="library_ActionBarSherlock_licenseId">gnu</string>
    <string name="library_ActionBarSherlock_isOpenSource">true</string>
    <string name="library_ActionBarSherlock_repositoryLink">https://github.com/scoute-dich/Sieben</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="gender_label">Gender:</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>
    <string name="age_label">Age:</string>
    <string name="weight_label">Weight:</string>
    <string name="height_in_feet_label">Height in Feet:</string>
    <string name="height_in_inches_label">Height in Inches:</string>
    <string name="goal_weight_label">Goal Weight:</string>
    <string name="submit_profile">Submit Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pref_gender_list">
        <item name="maleGender">Male</item>
        <item name="femaleGender">Female</item>
        <item name="otherGender">Other</item>
    </string-array>
    <string name="exercise_title_jumpingjacks">Jumping Jacks</string>
    <string name="exercise_title_plank">Plank</string>
    <string name="exercise_title_lunges">Lunges</string>
    <string name="exercise_title_pushups">Pushups</string>
    <string name="exercise_title_situps">Situps</string>
    <string name="exercise_title_high_knees">High Knees</string>
    <string name="exercise_title_side_plank">Side Plank</string>
    <string name="exercise_title_tricepdip">Tricep Dips</string>
    <string name="exercise_title_squats">Squats</string>
    <string name="warmup_exercise_title">Stretch/Jog</string>
    <string name="plank_count_w1d1">60</string>
    <string name="plank_count_w1d2">70</string>
    <string name="plank_count_w1d3">80</string>
    <string name="plank_count_w2d1">90</string>
    <string name="plank_count_w2d2">100</string>
    <string name="plank_count_w2d3">110</string>
    <string name="plank_count_w3d1">120</string>
    <string name="plank_count_w3d2">130</string>
    <string name="plank_count_w3d3">140</string>
    <string name="plank_count_w4d1">150</string>
    <string name="plank_count_w4d2">160</string>
    <string name="plank_count_w4d3">180</string>
    <string name="reps_w1d1">15</string>
    <string name="reps_w1d2">18</string>
    <string name="reps_w1d3">21</string>
    <string name="reps_w2d1">25</string>
    <string name="reps_w2d2">28</string>
    <string name="reps_w2d3">30</string>
    <string name="reps_w3d1">33</string>
    <string name="reps_w3d2">35</string>
    <string name="reps_w3d3">38</string>
    <string name="reps_w4d1">42</string>
    <string name="reps_w4d2">45</string>
    <string name="reps_w4d3">50</string>
    <string name="voice_coach_jumping_jacks_w1d1">Do 15 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w1d2">Do 18 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w1d3">Do 21 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w2d1">Do 25 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w2d2">Do 28 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w2d3">Do 30 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w3d1">Do 33 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w3d2">Do 35 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w3d3">Do 38 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w4d1">Do 42 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w4d2">Do 45 Jumping Jacks</string>
    <string name="voice_coach_jumping_jacks_w4d3">Do 50 Jumping Jacks</string>
    <string name="voice_coach_plank_w1d1">Plank for 60 seconds</string>
    <string name="voice_coach_plank_w1d2">Plank for 70 seconds</string>
    <string name="voice_coach_plank_w1d3">Plank for 80 seconds</string>
    <string name="voice_coach_plank_w2d1">Plank for 90 seconds</string>
    <string name="voice_coach_plank_w2d2">Plank for 100 seconds</string>
    <string name="voice_coach_plank_w2d3">Plank for 100 seconds</string>
    <string name="voice_coach_plank_w3d1">Plank for 120 seconds</string>
    <string name="voice_coach_plank_w3d2">Plank for 130 seconds</string>
    <string name="voice_coach_plank_w3d3">Plank for 140 seconds</string>
    <string name="voice_coach_plank_w4d1">Plank for 150 seconds</string>
    <string name="voice_coach_plank_w4d2">Plank for 160 seconds</string>
    <string name="voice_coach_plank_w4d3">Plank for 180 seconds</string>
    <string name="voice_coach_lunge_w1d1">Do 15 lunges for each leg</string>
    <string name="voice_coach_lunge_w1d2">Do 18 lunges for each leg</string>
    <string name="voice_coach_lunge_w1d3">Do 21 lunges for each leg</string>
    <string name="voice_coach_lunge_w2d1">Do 25 lunges for each leg</string>
    <string name="voice_coach_lunge_w2d2">Do 28 lunges for each leg</string>
    <string name="voice_coach_lunge_w2d3">Do 30 lunges for each leg</string>
    <string name="voice_coach_lunge_w3d1">Do 33 lunges for each leg</string>
    <string name="voice_coach_lunge_w3d2">Do 35 lunges for each leg</string>
    <string name="voice_coach_lunge_w3d3">Do 38 lunges for each leg</string>
    <string name="voice_coach_lunge_w4d1">Do 42 lunges for each leg</string>
    <string name="voice_coach_lunge_w4d2">Do 45 lunges for each leg</string>
    <string name="voice_coach_lunge_w4d3">Do 50 lunges for each leg</string>
    <string name="voice_coach_pushup_w1d1">Do 15 pushups</string>
    <string name="voice_coach_pushup_w1d2">Do 18 pushups</string>
    <string name="voice_coach_pushup_w1d3">Do 21 pushups</string>
    <string name="voice_coach_pushup_w2d1">Do 25 pushups</string>
    <string name="voice_coach_pushup_w2d2">Do 28 pushups</string>
    <string name="voice_coach_pushup_w2d3">Do 30 pushups</string>
    <string name="voice_coach_pushup_w3d1">Do 33 pushups</string>
    <string name="voice_coach_pushup_w3d2">Do 35 pushups</string>
    <string name="voice_coach_pushup_w3d3">Do 38 pushups</string>
    <string name="voice_coach_pushup_w4d1">Do 42 pushups</string>
    <string name="voice_coach_pushup_w4d2">Do 45 pushups</string>
    <string name="voice_coach_pushup_w4d3">Do 50 pushups</string>
    <string name="voice_coach_situp_w1d1">Do 15 situps</string>
    <string name="voice_coach_situp_w1d2">Do 18 situps</string>
    <string name="voice_coach_situp_w1d3">Do 21 situps</string>
    <string name="voice_coach_situp_w2d1">Do 25 situps</string>
    <string name="voice_coach_situp_w2d2">Do 28 situps</string>
    <string name="voice_coach_situp_w2d3">Do 30 situps</string>
    <string name="voice_coach_situp_w3d1">Do 33 situps</string>
    <string name="voice_coach_situp_w3d2">Do 35 situps</string>
    <string name="voice_coach_situp_w3d3">Do 38 situps</string>
    <string name="voice_coach_situp_w4d1">Do 42 situps</string>
    <string name="voice_coach_situp_w4d2">Do 45 situps</string>
    <string name="voice_coach_situp_w4d3">Do 50 situps</string>
    <string name="voice_coach_high_knees_w1d1">Do 15 high knees for each leg</string>
    <string name="voice_coach_high_knees_w1d2">Do 18 high knees for each leg</string>
    <string name="voice_coach_high_knees_w1d3">Do 21 high knees for each leg</string>
    <string name="voice_coach_high_knees_w2d1">Do 25 high knees for each leg</string>
    <string name="voice_coach_high_knees_w2d2">Do 28 high knees for each leg</string>
    <string name="voice_coach_high_knees_w2d3">Do 30 high knees for each leg</string>
    <string name="voice_coach_high_knees_w3d1">Do 33 high knees for each leg</string>
    <string name="voice_coach_high_knees_w3d2">Do 35 high knees for each leg</string>
    <string name="voice_coach_high_knees_w3d3">Do 38 high knees for each leg</string>
    <string name="voice_coach_high_knees_w4d1">Do 42 high knees for each leg</string>
    <string name="voice_coach_high_knees_w4d2">Do 45 high knees for each leg</string>
    <string name="voice_coach_high_knees_w4d3">Do 50 high knees for each leg</string>
    <string name="voice_coach_side_plank_w1d1">Do 15 side planks for each side</string>
    <string name="voice_coach_side_plank_w1d2">Do 18 side planks for each side</string>
    <string name="voice_coach_side_plank_w1d3">Do 21 side planks for each side</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary"><![CDATA[General settings & notifications]]></string>
    <string name="pref_header_profile_summary"><![CDATA[Change & edit your information]]></string>
    <string name="pref_header_exercises_summary">Choose which exercises you want to include in your workouts</string>
    <string name="pref_profile_fName">First Name</string>
    <string name="pref_profile_lName">Last Name</string>
    <string name="pref_profile_gender">Gender</string>
    <string name="pref_profile_age">Age</string>
    <string name="pref_profile_weight">Weight</string>
    <string name="pref_profile_goal_weight">Goal Weight</string>
    <string name="pref_general_exercise_title">Exercises</string>
    <string name="pref_exercise_jumping_jacks_title">Jumping Jacks</string>
    <string name="pref_exercise_plank_title">Plank</string>
    <string name="pref_exercise_burpees_title">Burpees</string>
    <string name="pref_exercise_lunges_title">Lunges</string>
    <string name="pref_exercise_pushups_title">Push ups</string>
    <string name="pref_exercise_situps_title">Sit ups</string>
    <string name="pref_exercise_high_knees_title">High Knees</string>
    <string name="pref_exercise_wall_sit_title">Wall Sit</string>
    <string name="pref_exercise_side_plank_title">Side Plank</string>
    <string name="pref_exercise_tricep_dips_title">Tricep Dips</string>
    <string name="pref_exercise_leg_lift_title">Leg Lift</string>
    <string name="pref_exercise_russian_twist_title">Russian Twist</string>
    <string name="pref_exercise_squats_title">Squats</string>
</resources>