<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="ex1"
        android:title="@string/pref_exercise_jumping_jacks_title" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_plank_title"
        android:defaultValue="true"
        android:key="ex2" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_burpees_title"
        android:defaultValue="true"
        android:key="act3" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_lunges_title"
        android:defaultValue="true"
        android:key="ex4" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_pushups_title"
        android:defaultValue="true"
        android:key="ex5" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_situps_title"
        android:defaultValue="true"
        android:key="ex6" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_high_knees_title"
        android:defaultValue="true"
        android:key="ex7" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_wall_sit_title"
        android:defaultValue="true"
        android:key="ex8" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_side_plank_title"
        android:defaultValue="true"
        android:key="ex9" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_tricep_dips_title"
        android:defaultValue="true"
        android:key="ex10" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_leg_lift_title"
        android:defaultValue="true"
        android:key="ex11" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_russian_twist_title"
        android:defaultValue="true"
        android:key="ex12" />

    <CheckBoxPreference
        android:title="@string/pref_exercise_squats_title"
        android:defaultValue="true"
        android:key="ex13" />

</PreferenceScreen>