<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_workouts"
            android:icon="@drawable/weight"
            android:title="@string/title_workouts" />

        <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/history"
            android:title="@string/title_history" />

        <item
            android:id="@+id/navigation_tips"
            android:icon="@drawable/help"
            android:title="@string/title_tips" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    </group>

    </menu>