<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".WelcomeScreenFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="100pt"
        android:layout_height="2pt"
        android:layout_gravity="center"
        android:background="@color/colorBlack"
        android:padding="8dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorSecondary"
            android:padding="8dp">

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/coda"
                android:gravity="center"
                android:text="@string/gender_label"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:typeface="serif" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorBlack"
                    android:fontFamily="@font/coda"
                    android:text="@string/radio_male"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorBlack"
                    android:fontFamily="@font/coda"
                    android:text="@string/radio_female"
                    android:textSize="20sp" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorSecondary"
            android:padding="8dp">

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/coda"
                android:gravity="center"
                android:text="@string/age_label"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:focusedByDefault="false"
                android:hint="ex. 23"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorSecondary"
            android:padding="8dp">

            <TextView
                android:id="@+id/weightLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/coda"
                android:gravity="center"
                android:text="@string/weight_label"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="ex. 180 (lbs)"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorSecondary"
            android:padding="8dp">

            <TextView
                android:id="@+id/goalWeightLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/coda"
                android:gravity="center"
                android:text="@string/goal_weight_label"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/goalWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:inputType="number"
                android:hint="ex. 170 (lbs)"/>

        </TableRow>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorSecondary"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/heightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/coda"
                    android:text="@string/height_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:typeface="serif"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/heightFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:dropDownWidth="match_parent"
                    android:gravity="center" />

                <Spinner
                    android:id="@+id/heightInches"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:dropDownWidth="match_parent" />

            </LinearLayout>

        <Button
            android:id="@+id/submitProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/colorSecondary"
            android:fontFamily="@font/coda"
            android:padding="8dp"
            android:text="@string/submit_profile"
            android:textSize="24sp" />
    </TableLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:background="@color/colorSecondary"
        android:backgroundTintMode="src_over"
        android:padding="8dp" />


</LinearLayout>